<resources>

    <!-- region Common -->

    <string name="app_name">Author Chat</string>

    <!-- endregion -->

    <!-- region Login -->

    <string name="login_button_sign_in">Sign In</string>
    <string name="login_username_placeholder">username</string>
    <string name="login_password_placeholder">password</string>
    <string name="login_checkbox_text">Remember user?</string>
    <string name="login_website_address_placeholder">eg. MyWebsite.com</string>

    <string-array name="login_spinner_url_prefix">
        <item>https://</item>
        <item>http://</item>
    </string-array>

    <!-- endregion -->

    <!-- region Chat -->

    <string name="chat_button_send_message">Send</string>
    <string name="chat_message_hint">Your message…</string>
    <string name="chat_button_main_room">Main Room</string>
    <string name="chat_button_room">Room %1$d</string>

    <!-- endregion -->

    <!-- region Errors -->

    <string name="error_dialog_title">Oh no…</string>
    <string name="error_dialog_negative_button">Close</string>
    <string name="error_dialog_message_invalid_host">Unable to resolve host. Please go back and check your website
        url.
    </string>
    <string name="error_dialog_message_invalid_username">Invalid username. Please go back and check your username.
    </string>
    <string name="error_dialog_message_invalid_password">Wrong password for username. Please go back and check your
        password.
    </string>
    <string name="error_dialog_message_unknown">Unknown error. I really don\'t know what to do…</string>

    <!-- endregion -->

    <!--region About -->

    <string name="about">About</string>
    <string name="rights">Copyright %1$d, Pesta Apps\nAll Rights Reserved</string>
    <string name="contact_me">If you have any questions or problems with app, please contact me at\n
        <a href="mailto:piotr.pesta@gmail.com">piotr.pesta@gmail.com</a>
    </string>

    <!-- endregion -->

</resources>
