<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.login.LoginFragment">

    <ImageView
            android:src="@drawable/logo_author_chat"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/loginLogo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true" android:cropToPadding="false" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" android:layout_marginTop="8dp"/>

    <!-- region Login Form -->

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/linearLayout"
            android:layout_marginBottom="8dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp">
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/login_spinner_url_prefix"
                    android:id="@+id/urlPrefixSpinner"
            />
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:hint="@string/login_website_address_placeholder"
                    android:drawableStart="@drawable/ic_twotone_insert_link"
                    android:ems="20"
                    android:id="@+id/websiteAddress"
                    android:textSize="14sp"
                    android:textAlignment="center"/>
        </LinearLayout>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/login_username_placeholder"
                android:drawableStart="@drawable/ic_twotone_face"
                android:ems="15"
                android:id="@+id/username"
                android:textSize="18sp"
                android:textAlignment="center" android:layout_margin="5dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_password_placeholder"
                android:drawableStart="@drawable/ic_twotone_lock_open"
                android:ems="15"
                android:id="@+id/password"
                android:textSize="18sp"
                android:textAlignment="center" android:layout_margin="5dp"/>
        <CheckBox
                android:text="@string/login_checkbox_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rememberUserCheckBox"
                android:textSize="12sp" android:layout_margin="5dp"/>
        <Button
                android:text="@string/login_button_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signInButton"
                style="@style/AuthorChat.Widget.Button.TurquoiseBlue"
                android:textAllCaps="true"
                android:padding="16dp"
                android:textSize="20sp" android:layout_margin="5dp"/>
    </LinearLayout>

    <!-- endregion -->

</androidx.constraintlayout.widget.ConstraintLayout>