<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.chat.ChatFragment">

    <com.google.android.flexbox.FlexboxLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexWrap="wrap"
            app:alignItems="stretch"
            app:alignContent="stretch"
            android:id="@+id/flexboxLayoutRoomsButtonsContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
                android:text="@string/chat_button_main_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mainRoomButton"
                style="@style/MaterialButtonsStyle"/>

    </com.google.android.flexbox.FlexboxLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/chatRecyclerView"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flexboxLayoutRoomsButtonsContainer"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutSendMessageContainer"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#DCEDC8"
            android:id="@+id/linearLayoutSendMessageContainer">
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textMultiLine"
                android:gravity="start|top"
                android:maxLength="2000"
                android:maxLines="6"
                android:ems="10"
                android:scrollHorizontally="false"
                android:id="@+id/messageEditText"
                android:layout_weight="1"
                android:hint="@string/chat_message_hint"/>
        <Button
                android:text="@string/chat_button_send_message"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/sendButton"
                android:layout_gravity="bottom"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>